--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -46,7 +46,7 @@
         </li>
       {% endif %}
       <li>
-        <a href="#">
+        <a href="/pages/wishlist">
           <i class="fa-solid fa-heart"></i>
         </a>
       </li>
