--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,7 @@
     <main role="main">
       {{ content_for_layout }}
     </main>
+    <div id="popups"></div>
     {% section 'footer' %}
   </body>
 </html>
