--- a/sections/timer.liquid
+++ b/sections/timer.liquid
@@ -1,3 +1,4 @@
+{% assign end_date = section.settings.end_time | date: "%d/%m/%Y %H:%M:%S" %}
 <section class="timer-container">
   <div class="timer-info-box">
     <div class="timer-info">
@@ -9,11 +10,16 @@
       </div>
       <span>Adjustable Bowline Necklace</span>
       <span class="price">$86.00</span>
-      <div
+      {% comment %} <div
         class="timer"
         data-day="{{ section.settings.day }}"
         data-month="{{section.settings.month}}"
-        data-year="{{ section.settings.year }}"></div>
+      data-year="{{ section.settings.year }}"></div> {% endcomment %}
+      <timer-component
+        data-day="{{ section.settings.day }}"
+        data-month="{{section.settings.month}}"
+        data-year="{{ section.settings.year }}"
+        data-endtime="{{ section.settings.end_time | date: "%d/%m/%Y %H:%M:%S" }}"></timer-component>
       <div>
         <button>View full details</button>
       </div>
@@ -29,27 +35,36 @@
         "type": "product",
         "id": "product1_url",
         "label": "Pick the product one for buy now button"
-      }, {
+      },
+      {
         "type": "range",
         "id": "day",
         "default": 20,
         "label": "pick the day sale starts",
         "min": 1,
         "max": 31
-      }, {
+      },
+      {
         "type": "range",
         "id": "month",
         "default": 12,
         "label": "add the month",
         "min": 1,
         "max": 12
-      }, {
+      },
+      {
         "type": "range",
         "id": "year",
         "default": 2023,
         "label": "add the year",
         "min": 2023,
         "max": 2030
+      }, {
+        "type": "text",
+        "id": "end_time",
+        "label": "End date and time",
+        "default": "30/12/2023 23:00:00",
+        "info": "Format: dd/mm/yyyy hh:mm:ss"
       }
     ],
     "presets": [
